[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
turbosql = "0.7.0"
ed25519 = "2.1.0"
ring-compat = "0.6.0"
rand_core = "0.6.4"
once_cell = "1.17.1"
wallet = { path = "../wallet" }