[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincash-addr = "0.5.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
rand = "0.8.5"
rust-crypto = "^0.2"
ed25519 = "2.1.0"
sled = "0.34"
bincode = "1.3"
failure = "0.1"
log = "0.4"
ring-compat = "0.6.0"
rand_core = "0.6.4"